# rustyray

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  GITHUB_SETUP.md  LICENSE  Makefile  README.md  README_TESTING.md  ROADMAP.md  gemini-phase4.5-final-review.sh
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci.yml  release.yml
crates/rustyray/: Cargo.toml
crates/rustyray-core/: Cargo.toml  build.rs
crates/rustyray-core/examples/: README.md  actor_object_sharing.rs  cancellation.rs  counter.rs  error_handling.rs  macros_demo.rs  memory_optimization.rs  object_store_demo.rs  tasks.rs
crates/rustyray-core/src/: error.rs  lib.rs  main.rs  object_ref.rs  prelude.rs  ray.rs  runtime.rs  test_utils.rs  types.rs
crates/rustyray-core/src/actor/: mod.rs
crates/rustyray-core/src/object_store/: mod.rs  store.rs  tests.rs  traits.rs  types.rs
crates/rustyray-core/src/task/: cancellation.rs  context.rs  manager.rs  mod.rs  object_ref.rs  registry.rs  serde_utils.rs  spec.rs  system.rs  test_builder_errors.rs  test_cancellation_integration.rs  test_error_propagation.rs  test_objectref_args.rs  test_objectref_passing.rs  test_objectref_sharing.rs
crates/rustyray-core/src/tests/: shutdown_tests.rs
crates/rustyray-core/tests/: actor_task_integration.rs  integration_tests.rs
crates/rustyray-macros/: Cargo.toml
crates/rustyray-macros/src/: actor.rs  lib.rs  remote.rs  utils.rs
crates/rustyray-macros/tests/: ui_tests.rs
crates/rustyray-macros/tests/ui/: Cargo.toml
crates/rustyray-macros/tests/ui/fail/: actor_methods_on_trait.rs  actor_methods_on_trait.stderr  actor_with_generics.rs  actor_with_generics.stderr  const_function.rs  const_function.stderr  method_without_self.rs  method_without_self.stderr  remote_with_self.rs  remote_with_self.stderr  self_parameter.rs  self_parameter.stderr
crates/rustyray-macros/tests/ui/pass/: basic.rs  objectref_args.rs  sync_function.rs
crates/rustyray/examples/: README.md  actor_demo.rs  comprehensive_macro_demo.rs  counter_macro.rs  error_context_demo.rs  macro_demo.rs  objectref_arg_test.rs  objectref_demo.rs  race_condition_test.rs  ray_api_demo.rs  simple_debug_test.rs  simple_ray_test.rs  tasks_macro.rs
crates/rustyray/src/: lib.rs
crates/rustyray/tests/: actor_tests.rs  integration_test.rs
docs/: ADR-001-phase4.5-decisions.md  DOCUMENTATION_STRATEGY.md  ISSUE_CREATION_GUIDE.md  LABEL_STRATEGY.md  ORGANIZATION.md  README.md  final-task-arg-serialization-plan.md  gemini-code-review-prompt.md  gemini-task-args-review-request.md  macro-implementation-plan.md  phase1-design.md  phase2-design.md  phase2.5-api-improvements-summary.md  phase2.5-completion-summary.md  phase2.5-comprehensive-review-prompt.md  phase2.5-comprehensive-review-results.md  phase3-final-plan.md  phase3-gemini-feedback.md  phase3-gemini-review.md  phase3-technical-debt.md  phase3-week2-review-prompt.md  task-arg-serialization-fix-proposal.md
docs/adr/: ADR-002-runtime-refactor.md
examples/: cancellation.rs  counter.rs  error_handling.rs  future_api_vision.rs  memory_optimization.rs  tasks.rs
scripts/: create-labels.sh  create-phase-5.5-issues.sh  test.sh
src/: error.rs  lib.rs  main.rs  test_utils.rs  types.rs
(+63 files in other folders)
