[package]
name = "rustyray"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
dashmap = "6.1"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
once_cell = "1.19"
bytes = "1.9"
