[package]
name = "rustyray-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
darling.workspace = true

[dev-dependencies]
rustyray-core = { workspace = true }
trybuild.workspace = true