[package]
name = "rustyray"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rustyray-core = { workspace = true }
rustyray-macros = { workspace = true }

# Re-export key dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, optional = true }
linkme = { workspace = true }
bincode = { workspace = true }

[features]
default = ["serde"]
serde = ["dep:serde", "rustyray-core/serde"]

[dev-dependencies]
anyhow.workspace = true
criterion.workspace = true